# ColoredStream

./: .gitignore  CMakeLists.txt  README.md
samples/: CMakeLists.txt  Sample-README.cpp  Sample-classical.cpp  Sample-custom.cpp  Sample-rgb.cpp  Sample-stream.cpp
src/: CMakeLists.txt  ColoredStream.cpp
src/ColoredStream/: ColoredStream.h  ColoredStream.hpp
